добавил сущность Video

--- a/index.html
+++ b/index.html
@@ -5,41 +5,178 @@
     <title>Test streams</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="initVideo.js"></script>
-    <style>
-        .video {
-            width: 300px;
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="./Video.js"></script>
 </head>
 <body>
-
-<video id="video-1" class="video" controls muted autoplay></video>
-<video id="video-2" class="video" controls muted autoplay></video>
-<br>
-<video id="video-3" class="video" controls muted autoplay></video>
-<video id="video-4" class="video" controls muted autoplay></video>
+<div class="Grid">
+    <div class="VideoWrapper">
+        <div class="Video">
+            <canvas id='video-1' class="Video-Box"></canvas>
+            <div class="Video-Panel">
+                <button class="Button">Играть</button>
+                <button class="Button">Пауза</button>
+                <label class="Input Input-Brightness">Яркость<input value="0" type="range" min="0" max="100"></label>
+                <label class="Input Input-Contrast">Контрастность<input value="1" type="range" min="0" max="100"></label>
+                <button class="Button BtnAllCameras">Все камеры</button>
+            </div>
+        </div>
+    </div>
+    <div class="VideoWrapper">
+        <div class="Video">
+            <canvas id='video-2' class="Video-Box"></canvas>
+            <div class="Video-Panel">
+                <label class="Input Input-Brightness">Яркость<input value="0" type="range" min="0" max="100"></label>
+                <label class="Input Input-Contrast">Контрастность<input value="1" type="range" min="0" max="100"></label>
+                <button class="Button BtnAllCameras">Все камеры</button>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="Video">
+            <canvas id='video-3' class="Video-Box"></canvas>
+            <div class="Video-Panel">
+                <label class="Input Input-Brightness">Яркость<input value="0" type="range" min="0" max="100"></label>
+                <label class="Input Input-Contrast">Контрастность<input value="1" type="range" min="0" max="100"></label>
+                <button class="Button BtnAllCameras">Все камеры</button>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="Video">
+            <canvas id='video-4' class="Video-Box"></canvas>
+            <div class="Video-Panel">
+                <label class="Input Input-Brightness">Яркость<input value="0" type="range" min="0" max="100"></label>
+                <label class="Input Input-Contrast">Контрастность<input value="1" type="range" min="0" max="100"></label>
+                <button class="Button BtnAllCameras">Все камеры</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
-    initVideo(
-        document.getElementById('video-1'),
-        'http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fsosed%2Fmaster.m3u8'
-    );
+    
+    function createVideoElem(url) {
+        const video = document.createElement('video');
+        video.autoplay = false;
+        video.loop = true;
+        initVideo(video, url);
+        return video;
+    }
 
-    initVideo(
-        document.getElementById('video-2'),
-        'http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstairs%2Fmaster.m3u8'
-    );
+    // let gain = null;
+    // function updateCanvas(canvas, video) {
+    //     const context = canvas.getContext('2d');
+    //     function update() {
+    //         if (video && !video.paused && !video.ended) {
+    //             context.drawImage(video, 0, 0, canvas.width, canvas.height);
+    //         }
+    //         requestAnimationFrame(update);
+    //     }
+    //     update();
+    // }
 
-    initVideo(
-        document.getElementById('video-3'),
-        'http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fdog%2Fmaster.m3u8'
-    );
+    // function recalculateStyles(elem) {
+    //     const rect = elem.getBoundingClientRect();
+    //     elem.style.width = `${rect.width}px`;
+    //     elem.style.height = `${rect.height}px`;
+    //     elem.style.top = `${rect.top}px`;
+    //     elem.style.left = `${rect.left}px`;
+    // }
 
-    initVideo(
-        document.getElementById('video-4'),
-        'http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstreet%2Fmaster.m3u8'
-    );
+    // function getAverageVolume(buffer) {
+    //     let sum = 0;
+    //     let len = buffer.length;
+    //     for (let i = 0; i < len; i++) {
+    //         sum += buffer[i];
+    //     }
 
+    //     return sum / len;
+    // }
+
+    // const videos = document.querySelectorAll('.Video');
+    // for (let i = 0; i < videos.length; i++) {
+    //     const videoElem = videos[i];
+    //     const canvas = videoElem.querySelector('canvas');
+    //     const btnAllCameras = videoElem.querySelector('.BtnAllCameras');
+    //     const inputBrightness = videoElem.querySelector('.Input-Brightness');
+    //     const inputContrast = videoElem.querySelector('.Input-Contrast');
+    //     recalculateStyles(videoElem);
+    //     canvas.addEventListener('click', () => {
+    //         videoElem.classList.add('Video_fullscreen');
+    //     });
+
+    //     if (btnAllCameras !== null) {
+    //         btnAllCameras.addEventListener('click', () => {
+    //             videoElem.classList.remove('Video_fullscreen');
+    //         });
+    //     }
+
+    //     if (inputBrightness !== null) {
+    //         inputBrightness.addEventListener('change', (e) => {
+    //             const ctx = canvas.getContext('2d');
+    //             ctx.filter = `brightness(${e.target.value})`;
+    //         });
+    //     }
+
+    //     if (inputContrast !== null) {
+    //         inputContrast.addEventListener('change', (e) => {
+    //             const ctx = canvas.getContext('2d');
+    //             ctx.filter = `contrast(${e.target.value})`;
+    //         })
+    //     }
+    // };
+
+
+    // const video1 = createVideoElem('http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fsosed%2Fmaster.m3u8');
+    // const video2 = createVideoElem('http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstairs%2Fmaster.m3u8');
+    // const video3 = createVideoElem('http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fdog%2Fmaster.m3u8');
+    // const video4 = createVideoElem('http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstreet%2Fmaster.m3u8');
+
+    // const canvas1 = document.getElementById('video-1');
+    // const canvas2 = document.getElementById('video-2');
+    // const canvas3 = document.getElementById('video-3');
+    // const canvas4 = document.getElementById('video-4');
+
+    // //updateCanvas(canvas1, video1);
+    // // updateCanvas(canvas2, video2);
+    // // updateCanvas(canvas3, video3);
+    // // updateCanvas(canvas4, video4);
+
+    // canvas1.addEventListener('click', () => {
+    //     const context = new (window.AudioContext || window.webkitAudioContext)();
+    //     const analyser = context.createAnalyser();
+    //     analyser.smoothingTimeConstant = 0.3;
+    //     analyser.fftSize = 1024;
+
+    //     const source = context.createMediaElementSource(video1);
+    //     const processor = context.createScriptProcessor(512, 2, 1);
+    //     source.connect(analyser);
+    //     analyser.connect(processor);
+    //     source.connect(context.destination);
+    //     processor.connect(context.destination);
+    //     processor.onaudioprocess = (e) => {
+    //         const buffer = new Uint8Array(analyser.frequencyBinCount);
+    //         const chd = event.inputBuffer.getChannelData(0);
+    //         analyser.getByteFrequencyData(buffer);
+    //         const average = getAverageVolume(buffer);
+    //         console.log('VOLUME:' + average);
+    //     }
+    // });
+
+    const urls = ['http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fsosed%2Fmaster.m3u8',
+        'http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstairs%2Fmaster.m3u8',
+        'http://localhost:9191/master?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fdog%2Fmaster.m3u8',
+        'http://localhost:9191/live?url=http%3A%2F%2Flocalhost%3A3102%2Fstreams%2Fstreet%2Fmaster.m3u8',
+    ];
+
+
+    const videos = document.querySelectorAll('.Video');
+    for (let i = 0; i < videos.length; i++) {
+        const videoElem = videos[i];
+        const video = new Video(videoElem, createVideoElem(urls[i]));
+        video.init();
+        video.updateCanvas();
+    };
 </script>
 
 
